5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/3985/executions/1635_1053.log
== TEST (2019-04-08 14:34:56) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var==cervo):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	
print(mensagem)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    if (var==cervo):
NameError: name 'cervo' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:35:18) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:35:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:35:28) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	
print(mensagem)


-- EXECUTION TIME:
0.155741
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:35:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= "nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:35:57) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= var + "nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:12) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= var + nao eh patrono do Harry Potter
	
print(mensagem)


-- ERROR:
File "XXXX", line 9
    mensagem= var + nao eh patrono do Harry Potter
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:17) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= var + nao eh patrono do Harry Potter
	
print(mensagem)


-- ERROR:
File "XXXX", line 9
    mensagem= var + nao eh patrono do Harry Potter
                         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:29) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= var + " nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:36:35) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= var + " nao eh patrono do Harry Potter"
	
print(mensagem)


-- EXECUTION TIME:
0.156702
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh o patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:36:46) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh o patrono do Harry Potter"
else:
	mensagem= var + " nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh o patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 14:37:22) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + " nao eh patrono do Harry Potter"
	
print(mensagem)


-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 14:37:27) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
var= input("animal do patrono: ")

if (var == "cervo"):
	mensagem= "cervo eh patrono do Harry Potter"
else:
	mensagem= var + " nao eh patrono do Harry Potter"
	
print(mensagem)


-- EXECUTION TIME:
0.198778
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
